Moved the hosts file generation to the installer and pulled it out of the install manifest.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -598,15 +598,6 @@
 			&nbsp;
 		</td>
 	</tr>
-	<!-- Hosts File contents -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0215!#
-		</td>
-		<td colspan="2" class="fixed_width" style="text-align: left;">
-			#!replace!say_hosts_file!#
-		</td>
-	</tr>
 	<tr>
 		<td colspan="3">
 			&nbsp;
@@ -627,6 +618,7 @@
 			&nbsp;
 		</td>
 	</tr>
+	<!-- Current node access -->
 	<tr>
 		<td>
 			&nbsp;
