Fixed some problems with running the installer after a remap where the MAC addresses were not being passed along properly. Also switched, for now, back to DRBD 8.3.16 and added 'storcli' to the installed RPM list.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -1489,7 +1489,7 @@
 			#!string!row_0194!#<span class="highlight_bad_star">#!replace!anvil_password_star!#</span>
 		</td>
 		<td>
-			<input type="text" name="anvil_password" id="anvil_password" value="#!replace!anvil_password!#" style="width: 200px;" maxlength="15" />
+			<input type="text" name="anvil_password" id="anvil_password" value="#!replace!anvil_password!#" style="width: 200px;" />
 		</td>
 		<td style="text-align: left;">
 			#!string!explain_0110!#<br />
