--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -41,7 +41,7 @@
 		<td class="highlight_good_bold">
 			&nbsp;
 		</td>
-		<td colspan="2">
+		<td>
 			#!string!state_0009!#
 		</td>
 	</tr>
@@ -373,6 +373,20 @@
 					</td>
 				</tr>
 			</table>
+			<input type="hidden" name="anvil_node1_bcn_link1_mac" value="#!replace!bcn_link1_node1_mac!#" />
+			<input type="hidden" name="anvil_node1_bcn_link2_mac" value="#!replace!bcn_link2_node1_mac!#" />
+			<input type="hidden" name="anvil_node1_sn_link1_mac" value="#!replace!sn_link1_node1_mac!#" />
+			<input type="hidden" name="anvil_node1_sn_link2_mac" value="#!replace!sn_link2_node1_mac!#" />
+			<input type="hidden" name="anvil_node1_ifn_link1_mac" value="#!replace!ifn_link1_node1_mac!#" />
+			<input type="hidden" name="anvil_node1_ifn_link2_mac" value="#!replace!ifn_link2_node1_mac!#" />
+			
+			<input type="hidden" name="anvil_node2_bcn_link1_mac" value="#!replace!bcn_link1_node2_mac!#" />
+			<input type="hidden" name="anvil_node2_bcn_link2_mac" value="#!replace!bcn_link2_node2_mac!#" />
+			<input type="hidden" name="anvil_node2_sn_link1_mac" value="#!replace!sn_link1_node2_mac!#" />
+			<input type="hidden" name="anvil_node2_sn_link2_mac" value="#!replace!sn_link2_node2_mac!#" />
+			<input type="hidden" name="anvil_node2_ifn_link1_mac" value="#!replace!ifn_link1_node2_mac!#" />
+			<input type="hidden" name="anvil_node2_ifn_link2_mac" value="#!replace!ifn_link2_node2_mac!#" />
+			
 			<input type="hidden" name="anvil_node1_current_ip" value="#!replace!anvil_node1_current_ip!#" />
 			<input type="hidden" name="anvil_node1_current_ip" value="#!replace!anvil_node1_current_ip!#" />
 			<input type="hidden" name="anvil_node1_current_password" value="#!replace!anvil_node1_current_password!#" />
