Install manifest now properly sets up the firewall, creates and loads the initial 'cluster.conf' file, including fencing configuration. Added undocumented support for KVM-based nodes.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -610,6 +610,8 @@
 			&nbsp;
 		</td>
 	</tr>
+	<!-- VNC Ports to Open - Not yet user-selectable. -->
+	<input type="hidden" name="anvil_open_vnc_ports" id="anvil_open_vnc_ports" value="#!replace!anvil_open_vnc_ports!#" />
 	<tr>
 		<td colspan="3">
 			&nbsp;
