Oh this is a big one...
* For the first time, it starts 'cman' and verifies that fencing is working!
* Configures SSH (creates RSA keys, populates known_hosts and authorized_keys).
* Backs up original system files.
* Also fixed a bug with 'anvil-map-network' that failed to report the right MACs when bonds were in use.
* Added a sanity check when reading in MAC addresses from install manifests.
* Fixed some display bugs shown the user before running an install manifest.
* Fixed a bug with fencing veriable names in the install manifest.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -137,6 +137,17 @@
 	</tr>
 <!-- end new-anvil-install-be-patient-message -->
 
+<!-- start new-anvil-install-note-message -->
+	<tr>
+		<td class="highlight_note_bold">
+			#!string!row_0032!#
+		</td>
+		<td colspan="2">
+			#!replace!message!#
+		</td>
+	</tr>
+<!-- end new-anvil-install-note-message -->
+
 <!-- start close-table -->
 </table>
 <br />
