Can you say 'beta'? Not _just_ yet though. :D
This commit finishes the Anvil! installer. The button for choosing 'New' or 'Replace Node' will go as it shouldn't matter now. If the installer runs against an existing node, all of it's configs should be copied over.

Major bits:
* Starts clvmd, creates the PVs and VGs
* Sets up /shared; Including creating the LV, formatting, updating fstab, creating /shared subdirectories and setting selinux contexts.
* Starts rgmanager and makes sure the services start (or fail).
* Also bugs. Lots and lots of bugs I am sure.

Next up, fixing the run buttons and then major-time testing/bug squashing!

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -26,6 +26,19 @@
 	</tr>
 <!-- end new-anvil-install-header -->
 
+<!-- start new-anvil-install-success -->
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0266!#
+		</td>
+		<td colspan="2" class="highlight_ready">
+			<br />
+			#!string!message_0402!#<br />
+			<br />
+		</td>
+	</tr>
+<!-- end new-anvil-install-success -->
+
 <!-- start new-anvil-install-footer -->
 	<tr>
 		<td colspan="3">
@@ -99,6 +112,17 @@
 		</td>
 	</tr>
 <!-- end new-anvil-install-message -->
+
+<!-- start new-anvil-install-message-wide -->
+	<tr>
+		<td class="highlight_ready_bold">
+			#!replace!row!#
+		</td>
+		<td class="#!replace!class!#" colspan="2">
+			#!replace!message!#
+		</td>
+	</tr>
+<!-- end new-anvil-install-message-wide -->
 
 <!-- start new-anvil-install-failed -->
 	<tr>
