--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -1449,7 +1449,9 @@
 	<!-- Tell the user about this form -->
 	<tr>
 		<td colspan="4">
-			#!string!explain_0060!#
+			<br />
+			#!string!explain_0060!#<br />
+			<br />
 		</td>
 	</tr>
 	<tr>
