A bunch of bug fixes...
* Removed the question of "New install" vs "Replace a node" from the Install Manifest run (will have it be one in the same when the bugs are ironed out)
* Updates the install manifest confirmation page to load the MAC addresses from the anvil-map-network into the 'to_set' variables when the 'ifn-bridge1' device exits to make re-runs cleaner without re-prompting the user to map interfaces.
* Significantly overhauled how the fence stuff is parsed when reading in fence details. I am not sure what I was smoking when I first wrote that code... Big one was using proper references to link methods to devices instead of ... whatever I was doing.
* Fixed a bug where IPMI failed to start because it decided to laugh in the face of LSB compliance.
* Broke out setting 'root' and 'ricci' passwords into two functions as ccs was complaining about the ricci password not being set when we ran 'ccs_config_validate' (or sometime shortly after).
* Fixed a bug in the IPMI code where the LAN channel and user ID went 1 too high from the $x++ at the end of the loop.
* Fixed a bug where setting the IPMI IP wasn't detected because the regex matched the network status (dhcp v. static)
* Moved 'dhcpd' into the run-on-start section of the striker-installer. Will revert this later when I add the enable/disable boot target button in Striker proper.
* Added a function to the striker-installer ISO mount function to make sure the ISO is in /etc/fstab so that it mounts on boot.
* Fixed the generated kickstart script to a) clear 'all' partitions as it left the DRBD ones behind and b) have a proper start of the %post script that handles partitioning.
* Fixed a small bug where the PXE menu always showed '^5) ' for the RHEL node option.
* Fixed striker-installer to setup an iptables rule to allow incoming tftp connections.

Known Bug:
* Right now, a re-run of the installer fails because it doesn't see the previously-created DRBD partitions. Tomorrow's task...

Signed-off-by: Madison

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -1,51 +1,6 @@
 <!-- These are used when a user is configuring an Anvil! or the global values -->
 
-<!-- start ask-new-or-replace-run-install-manifest -->
-<table>
-	<tr>
-		<td colspan="2" class="highlight_ready_bold">
-			#!string!title_0170!#
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<br />
-			#!string!message_0353!#<br />
-			<br />
-			#!string!message_0354!#<br />
-			<br />
-			#!string!message_0355!#<br />
-			<br />
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<a href="#!replace!new_link!#" class="bold_button">#!string!button_0050!#</a>
-		</td>
-		<td>
-			<a href="#!replace!replace_link!#" class="bold_button">#!string!button_0051!#</a>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-</table>
-<br />
-<!-- end ask-new-or-replace-run-install-manifest -->
-
-<!-- start confirm-new-anvil-creation -->
+<!-- start confirm-anvil-manifest-run -->
 <table>
 	<form action="#!replace!form_file!#" method="post" name="config">
 	<tr>
@@ -69,7 +24,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td class="highlight_ready_bold">
+		<td class="highlight_warning_bold">
 			#!string!button_0050!#
 		</td>
 		<td colspan="2">
@@ -711,7 +666,7 @@
 	</form>
 </table>
 <br />
-<!-- end confirm-new-anvil-creation -->
+<!-- end confirm-anvil-manifest-run -->
 
 <!-- start install-manifest-summay -->
 <table>
