--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -26,6 +26,26 @@
 	</tr>
 <!-- end new-anvil-install-header -->
 
+<!-- start new-anvil-install-failed-footer -->
+	<tr>
+		<td class="highlight_warning_bold">
+			#!string!row_0133!#
+		</td>
+		<td colspan="2" class="highlight_ready">
+			<br />
+			#!string!message_0404!#<br />
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td colspan="3">
+			#!string!message_0120!#
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end new-anvil-install-failed-footer -->
+
 <!-- start new-anvil-install-success -->
 	<tr>
 		<td class="highlight_good_bold">
@@ -37,9 +57,6 @@
 			<br />
 		</td>
 	</tr>
-<!-- end new-anvil-install-success -->
-
-<!-- start new-anvil-install-footer -->
 	<tr>
 		<td colspan="3">
 			#!string!message_0120!#
@@ -47,7 +64,7 @@
 	</tr>
 </table>
 <br />
-<!-- end new-anvil-install-footer -->
+<!-- end new-anvil-install-success -->
 
 <!-- start sanity-checks-complete -->
 	<tr>
