--- a/html/skins/alteeve/select-anvil.html
+++ b/html/skins/alteeve/select-anvil.html
@@ -1,5 +1,50 @@
 <!-- This is for templates related to the "Select and Anvil!" page shown when 2+ Anvil!s are configured but none are selected. -->
 
+<!-- start confirm-dhcpd-start -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_ready_bold">
+			#!string!title_0178!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_warning_bold">
+			#!string!row_0120!#
+		</td>
+		<td>
+			<br />
+			#!string!message_0409!#<br />
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2" class="bold_button" style="text-align: right;">
+			<a href="#!replace!confirm_url!#">#!string!button_0004!#</a>
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end confirm-dhcpd-start -->
+
+<!-- start control-dhcpd-results -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_ready_bold">
+			#!string!title_0178!#
+		</td>
+	</tr>
+	<tr>
+		<td class="#!replace!class!#">
+			#!string!row_0083!#
+		</td>
+		<td>
+			#!replace!message!#
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end control-dhcpd-results -->
+
 <!-- start open-table -->
 <table>
 	<tr>
@@ -100,6 +145,8 @@
 			#!string!message_0344!#
 		</td>
 	</tr>
+	<!-- Install Target -->
+	#!replace!install_manifest_tr!#
 <!--	<tr>
 		<td>
 			<a href="?system=true">#!string!row_0136!#</a>
@@ -116,3 +163,26 @@
 </table>
 <br />
 <!-- end close-table -->
+
+<!-- start enabled-install-target-button -->
+	<tr>
+		<td colspan="2">
+			<a href="#!replace!install_target_url!#">#!replace!install_target_button!#</a>
+		</td>
+		<td colspan="3">
+			#!replace!install_target_message!#
+		</td>
+	</tr>
+<!-- end enabled-install-target-button -->
+
+<!-- start disabled-install-target-button -->
+	<tr>
+		<td colspan="2">
+			<span class="disabled_button">#!replace!install_target_button!#</span>
+		</td>
+		<td colspan="3">
+			#!replace!install_target_message!#
+		</td>
+	</tr>
+<!-- end disabled-install-target-button -->
+
