--- a/html/skins/alteeve/select-anvil.html
+++ b/html/skins/alteeve/select-anvil.html
@@ -76,12 +76,23 @@
 	</tr>
 <!-- end open-table -->
 
+<!-- start global-not-configured -->
+	<tr>
+		<td class="highlight_good">
+			#!string!row_0269!#
+		</td>
+		<td colspan="4">
+			#!string!message_0417!#
+		</td>
+	</tr>
+<!-- end global-not-configured -->
+
 <!-- start no-anvil-configured -->
 	<tr>
 		<td class="highlight_good">
 			#!string!row_0001!#
 		</td>
-		<td colspan="3">
+		<td colspan="4">
 			#!string!message_0001!#
 		</td>
 	</tr>
@@ -113,30 +124,34 @@
 			&nbsp;
 		</td>
 	</tr>
+	<!-- Configure global settings. -->
 	<tr>
 		<td colspan="2">
-			<a href="?config=true&anvil=new">#!string!row_0017!#</a>
-		</td>
-		<td colspan="3">
-			#!string!message_0343!#
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<a href="?config=true&task=create-install-manifest">#!string!row_0158!#</a>
-		</td>
-		<td colspan="3">
-			#!string!message_0345!#
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<a href="?config=true">#!string!row_0002!#</a>
+			<a href="?config=true">#!string!button_0059!#</a>
 		</td>
 		<td colspan="3">
 			#!string!message_0002!#
 		</td>
 	</tr>
+	<!-- Add a new Anvil! to Striker -->
+	<tr>
+		<td colspan="2">
+			<a href="?config=true&anvil=new">#!string!button_0061!#</a>
+		</td>
+		<td colspan="3">
+			#!string!message_0343!#
+		</td>
+	</tr>
+	<!-- Create or run an install manifest. -->
+	<tr>
+		<td colspan="2">
+			<a href="?config=true&task=create-install-manifest">#!string!button_0060!#</a>
+		</td>
+		<td colspan="3">
+			#!string!message_0345!#
+		</td>
+	</tr>
+	<!-- Backup and restore configuration -->
 	<tr>
 		<td colspan="2">
 			<a href="?config=true&task=archive">#!string!button_0040!#</a>
