--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -53,7 +53,7 @@
 		</td>
 		<td colspan="2" class="highlight_ready">
 			<br />
-			#!string!message_0402!#<br />
+			#!replace!message!#<br />
 			<br />
 		</td>
 	</tr>
