--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -218,6 +218,10 @@
 <a href="#!replace!button_link!#" id="#!replace!id!#" target="_new">#!replace!button_text!#</a>
 <!-- end enabled-button-no-class-new-tab -->
 
+<!-- start form-button -->
+<input type="submit" class="#!replace!class!#" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" />
+<!-- end form-button -->
+
 <!-- start new_line -->
 <br />
 <!-- end new_line -->
