--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -38,6 +38,43 @@
 		</td>
 	</tr>
 	<tr>
+		<form action="#!replace!form_file!#" method="post" name="config">
+			<td class="highlight_ready_bold">
+				#!string!row_0274!#
+			</td>
+			<td colspan="2" class="highlight_ready">
+				<br />
+				#!string!message_0432!#<br />
+				<br />
+				<input type="submit" class="#!replace!button_class!#" name="#!replace!button_name!#" id="#!replace!button_id!#" value="#!replace!button_value!#" /><br />
+				<br />
+			</td>
+			<input type="hidden" name="anvil_node1_current_ip" value="#!replace!anvil_node1_current_ip!#" />
+			<input type="hidden" name="anvil_node1_current_password" value="#!replace!anvil_node1_current_password!#" />
+			<input type="hidden" name="anvil_node2_current_ip" value="#!replace!anvil_node2_current_ip!#" />
+			<input type="hidden" name="anvil_node2_current_password" value="#!replace!anvil_node2_current_password!#" />
+			<input type="hidden" name="anvil_open_vnc_ports" value="#!replace!anvil_open_vnc_ports!#" />
+			<input type="hidden" name="run" value="#!replace!run!#" />
+			<input type="hidden" name="config" value="true" />
+			<input type="hidden" name="do" value="new" />
+			<input type="hidden" name="task" value="create-install-manifest" />
+			<input type="hidden" name="perform_install" value="Install" />
+			<input type="hidden" name="anvil_node1_bcn_link1_mac" value="anvil_node1_bcn_link1_mac" />
+			<input type="hidden" name="anvil_node1_bcn_link2_mac" value="anvil_node1_bcn_link2_mac" />
+			<input type="hidden" name="anvil_node1_ifn_link1_mac" value="anvil_node1_ifn_link1_mac" />
+			<input type="hidden" name="anvil_node1_ifn_link2_mac" value="anvil_node1_ifn_link2_mac" />
+			<input type="hidden" name="anvil_node1_sn_link1_mac" value="anvil_node1_sn_link1_mac" />
+			<input type="hidden" name="anvil_node1_sn_link2_mac" value="anvil_node1_sn_link2_mac" />
+			<input type="hidden" name="anvil_node2_bcn_link1_mac" value="anvil_node2_bcn_link1_mac" />
+			<input type="hidden" name="anvil_node2_bcn_link2_mac" value="anvil_node2_bcn_link2_mac" />
+			<input type="hidden" name="anvil_node2_ifn_link1_mac" value="anvil_node2_ifn_link1_mac" />
+			<input type="hidden" name="anvil_node2_ifn_link2_mac" value="anvil_node2_ifn_link2_mac" />
+			<input type="hidden" name="anvil_node2_sn_link1_mac" value="anvil_node2_sn_link1_mac" />
+			<input type="hidden" name="anvil_node2_sn_link2_mac" value="anvil_node2_sn_link2_mac" />
+
+		</form>
+	</tr>
+	<tr>
 		<td colspan="3">
 			#!string!message_0120!#
 		</td>
