--- a/html/skins/alteeve/main-page.html
+++ b/html/skins/alteeve/main-page.html
@@ -1,5 +1,13 @@
 <!-- These are templates for the main page; the stuff shown just after an Anvil! is selected. -->
 
+<!-- start redirect-to-configure -->
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Striker</title>
+	<META HTTP-EQUIV="Refresh" CONTENT="0; URL=/cgi-bin/Configure">
+</head>
+<!-- end redirect-to-configure -->
+
 <!-- start no-anvil-found -->
 <table align="center">
 	<tr>
