--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -27,7 +27,8 @@
 <br />
 <!-- end header -->
 
-<!-- start footer -->
+<!-- This was used when we used guacamole -->
+<!-- start old-footer -->
 <table class="hidden_table" width="100%">
 	<tr>
 		<td class="td_hidden">
@@ -40,6 +41,26 @@
 	</tr>
 </table>
 <p style="position:fixed; right:10; bottom:0"><a href="#!replace!guacamole_url!#" target="_new" class="subtle_link">&#191;</a></p>
+</body>
+<script type="text/javascript" src="#!conf!url::skins!#/#!conf!sys::skin!#/common.js"></script>
+<script type="text/javascript" src="#!conf!url::skins!#/#!conf!sys::skin!#/config.js"></script>
+<img src="#!conf!url::skins!#/#!conf!sys::skin!#/images/t.png" onload="show_on_load();" border="0" />
+<img src="#!conf!url::skins!#/#!conf!sys::skin!#/images/t.png" onload="hide_on_load();" border="0" />
+</html>
+<!-- end old-footer -->
+
+<!-- start footer -->
+<table class="hidden_table" width="100%">
+	<tr>
+		<td class="td_hidden">
+			<span class="legal">
+			#!string!legal_0001!#<br />
+			#!string!legal_0002!#<br />
+			#!string!legal_0003!#<br />
+			</span>
+		</td>
+	</tr>
+</table>
 </body>
 <script type="text/javascript" src="#!conf!url::skins!#/#!conf!sys::skin!#/common.js"></script>
 <script type="text/javascript" src="#!conf!url::skins!#/#!conf!sys::skin!#/config.js"></script>
