--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -668,7 +668,7 @@
 <br />
 <!-- end confirm-anvil-manifest-run -->
 
-<!-- start install-manifest-summay -->
+<!-- start install-manifest-summay-header -->
 <table>
 	<form action="#!replace!form_file!#" method="post" name="config">
 	<tr>
@@ -681,11 +681,12 @@
 			&nbsp;
 		</td>
 	</tr>
-	
-	<!-- Node details -->
+<!-- end install-manifest-summay-header -->
+
+<!-- start install-manifest-summay-title -->
 	<tr>
 		<td colspan="5" class="highlight_good_bold">
-			#!string!title_0159!#
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -693,413 +694,97 @@
 			&nbsp;
 		</td>
 	</tr>
+<!-- end install-manifest-summay-title -->
+
+<!-- start install-manifest-summay-column-header -->
 	<tr>
 		<td>
 			&nbsp;
 		</td>
 		<td class="highlight_good_bold" colspan="2">
-			#!string!header_0001!#
+			#!replace!column1!#
 		</td>
 		<td class="highlight_good_bold" colspan="2">
-			#!string!header_0002!#
+			#!replace!column2!#
 		</td>
 	</tr>
-	<!-- Host names -->
+<!-- end install-manifest-summay-column-header -->
+
+<!-- start install-manifest-summay-entry -->
 	<tr>
 		<td class="highlight_good_bold">
-			#!string!row_0165!#
+			#!replace!row!#
 		</td>
 		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node1_name!#
+			#!replace!column1!#
 		</td>
 		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node2_name!#
+			#!replace!column2!#
 		</td>
 	</tr>
-	<!-- BCN IPs -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0166!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node1_bcn_ip!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node2_bcn_ip!#
-		</td>
-	</tr>
-	<!-- IPMI IPs -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0168!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node1_ipmi_ip!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node2_ipmi_ip!#
-		</td>
-	</tr>
-	<!-- SN IPs -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0167!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node1_sn_ip!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node2_sn_ip!#
-		</td>
-	</tr>
-	<!-- IFN IPs -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0169!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node1_ifn_ip!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node2_ifn_ip!#
-		</td>
-	</tr>
-	<!-- PDU 1 outlet -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0192!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node1_pdu1_outlet!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node2_pdu1_outlet!#
-		</td>
-	</tr>
-	<!-- PDU 2 outlet -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0193!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node1_pdu2_outlet!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_node2_pdu2_outlet!#
-		</td>
-	</tr>
+<!-- end install-manifest-summay-entry -->
+
+<!-- start install-manifest-summay-spacer -->
 	<tr>
 		<td colspan="5">
 			&nbsp;
 		</td>
 	</tr>
-	
-	<!-- Striker dashboard details -->
-	<tr>
-		<td colspan="5" class="highlight_good_bold">
-			#!string!title_0161!#
-		</td>
-	</tr>
-	<tr>
-		<td colspan="5">
-			&nbsp;
-		</td>
-	</tr>
-	<tr>
-		<td>
-			&nbsp;
-		</td>
-		<td class="highlight_good_bold" colspan="2">
-			#!string!title_0162!#
-		</td>
-		<td class="highlight_good_bold" colspan="2">
-			#!string!title_0163!#
-		</td>
-	</tr>
-	<!-- Host names -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0165!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_striker1_name!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_striker2_name!#
-		</td>
-	</tr>
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0166!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_striker1_bcn_ip!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_striker2_bcn_ip!#
-		</td>
-	</tr>
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0167!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_striker1_ifn_ip!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_striker2_ifn_ip!#
-		</td>
-	</tr>
-	<tr>
-		<td colspan="5">
-			&nbsp;
-		</td>
-	</tr>
-	
-	<!-- Foundation Pack details -->
-	<tr>
-		<td colspan="5" class="highlight_good_bold">
-			#!string!title_0160!#
-		</td>
-	</tr>
-	<tr>
-		<td colspan="5">
-			&nbsp;
-		</td>
-	</tr>
-	<tr>
-		<td>
-			&nbsp;
-		</td>
-		<td class="highlight_good_bold" colspan="2">
-			#!string!header_0003!#
-		</td>
-		<td class="highlight_good_bold" colspan="2">
-			#!string!header_0004!#
-		</td>
-	</tr>
+<!-- end install-manifest-summay-spacer -->
+
+<!-- start install-manifest-summay-four-column-header -->
 	<tr>
 		<td>
 			&nbsp;
 		</td>
 		<td class="highlight_good_bold">
-			#!string!header_0006!#
+			#!replace!column1!#
 		</td>
 		<td class="highlight_good_bold">
-			#!string!header_0007!#
+			#!replace!column2!#
 		</td>
 		<td class="highlight_good_bold">
-			#!string!header_0006!#
+			#!replace!column3!#
 		</td>
 		<td class="highlight_good_bold">
-			#!string!header_0007!#
+			#!replace!column4!#
 		</td>
 	</tr>
-	<!-- Switches -->
+<!-- end install-manifest-summay-four-column-header -->
+
+<!-- start install-manifest-summay-four-column-entry -->
 	<tr>
 		<td class="highlight_good_bold">
-			#!string!row_0195!#
+			#!replace!row!#
 		</td>
 		<td class="fixed_width">
-			#!replace!anvil_switch1_name!#
+			#!replace!column1!#
 		</td>
 		<td class="fixed_width">
-			#!replace!anvil_switch1_ip!#
+			#!replace!column2!#
 		</td>
 		<td class="fixed_width">
-			#!replace!anvil_switch2_name!#
+			#!replace!column3!#
 		</td>
 		<td class="fixed_width">
-			#!replace!anvil_switch2_ip!#
+			#!replace!column4!#
 		</td>
 	</tr>
-	<!-- PDUs -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0196!#
-		</td>
-		<td class="fixed_width">
-			#!replace!anvil_pdu1_name!#
-		</td>
-		<td class="fixed_width">
-			#!replace!anvil_pdu1_ip!#
-		</td>
-		<td class="fixed_width">
-			#!replace!anvil_pdu2_name!#
-		</td>
-		<td class="fixed_width">
-			#!replace!anvil_pdu2_ip!#
-		</td>
-	</tr>
-	<!-- UPSes -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0197!#
-		</td>
-		<td class="fixed_width">
-			#!replace!anvil_ups1_name!#
-		</td>
-		<td class="fixed_width">
-			#!replace!anvil_ups1_ip!#
-		</td>
-		<td class="fixed_width">
-			#!replace!anvil_ups2_name!#
-		</td>
-		<td class="fixed_width">
-			#!replace!anvil_ups2_ip!#
-		</td>
-	</tr>
-	<tr>
-		<td colspan="5">
-			&nbsp;
-		</td>
-	</tr>
-	
-	<!-- Common Variables -->
-	<tr>
-		<td colspan="5" class="highlight_good_bold">
-			#!string!title_0154!#
-		</td>
-	</tr>
-	<tr>
-		<td colspan="5">
-			&nbsp;
-		</td>
-	</tr>
-	<!-- Cluster name -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0005!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_name!#
-		</td>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-	<!-- Cluster password -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0194!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_password!#
-		</td>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-	<!-- Media Library (gfs2 /shared) Size -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0191!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_media_library_size!# #!replace!anvil_media_library_unit!#
-		</td>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-	<!-- Storage Pool 1 (difference goes to 2, not set here) -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0199!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_storage_pool1_size!# #!replace!anvil_storage_pool1_unit!#
-		</td>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-	<!-- BCN Network Mask -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0200!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_bcn_subnet!#
-		</td>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-	<!-- SN Network Mask -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0201!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_sn_subnet!#
-		</td>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-	<!-- IFN Network Mask -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0202!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_ifn_subnet!#
-		</td>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-	<!-- IFN Gateway -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0188!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_ifn_gateway!#
-		</td>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-	<!-- IFN Primary DNS -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0189!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_ifn_dns1!#
-		</td>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
-	<!-- IFN Secondary DNS -->
-	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0190!#
-		</td>
-		<td class="fixed_width" colspan="2">
-			#!replace!anvil_ifn_dns2!#
-		</td>
-		<td colspan="2">
-			&nbsp;
-		</td>
-	</tr>
+<!-- end install-manifest-summay-four-column-entry -->
+
+<!-- start install-manifest-summay-one-column-entry -->
 	<!-- Additional repositories -->
 	<tr>
 		<td class="highlight_good_bold">
-			#!string!row_0244!#
+			#!replace!row!#
 		</td>
 		<td class="fixed_width" colspan="4">
-			#!replace!say_anvil_repositories!#
+			#!replace!column1!#
 		</td>
 	</tr>
-	<tr>
-		<td colspan="5">
-			&nbsp;
-		</td>
-	</tr>
+<!-- end install-manifest-summay-one-column-entry -->
+
+<!-- start install-manifest-summay-footer -->
 	<tr>
 		<td class="highlight_warning_bold">
 			#!string!row_0198!#
@@ -1141,6 +826,8 @@
 						<input type="hidden" name="anvil_node1_ifn_ip"       id="anvil_node1_ifn_ip"       value="#!replace!anvil_node1_ifn_ip!#" />
 						<input type="hidden" name="anvil_node1_pdu1_outlet"  id="anvil_node1_pdu1_outlet"  value="#!replace!anvil_node1_pdu1_outlet!#" />
 						<input type="hidden" name="anvil_node1_pdu2_outlet"  id="anvil_node1_pdu2_outlet"  value="#!replace!anvil_node1_pdu2_outlet!#" />
+						<input type="hidden" name="anvil_node1_pdu3_outlet"  id="anvil_node1_pdu3_outlet"  value="#!replace!anvil_node1_pdu3_outlet!#" />
+						<input type="hidden" name="anvil_node1_pdu4_outlet"  id="anvil_node1_pdu4_outlet"  value="#!replace!anvil_node1_pdu4_outlet!#" />
 						<input type="hidden" name="anvil_node2_name"         id="anvil_node2_name"         value="#!replace!anvil_node2_name!#" />
 						<input type="hidden" name="anvil_node2_bcn_ip"       id="anvil_node2_bcn_ip"       value="#!replace!anvil_node2_bcn_ip!#" />
 						<input type="hidden" name="anvil_node2_ipmi_ip"      id="anvil_node2_ipmi_ip"      value="#!replace!anvil_node2_ipmi_ip!#" />
@@ -1148,9 +835,13 @@
 						<input type="hidden" name="anvil_node2_ifn_ip"       id="anvil_node2_ifn_ip"       value="#!replace!anvil_node2_ifn_ip!#" />
 						<input type="hidden" name="anvil_node2_pdu1_outlet"  id="anvil_node2_pdu1_outlet"  value="#!replace!anvil_node2_pdu1_outlet!#" />
 						<input type="hidden" name="anvil_node2_pdu2_outlet"  id="anvil_node2_pdu2_outlet"  value="#!replace!anvil_node2_pdu2_outlet!#" />
+						<input type="hidden" name="anvil_node2_pdu3_outlet"  id="anvil_node2_pdu3_outlet"  value="#!replace!anvil_node2_pdu3_outlet!#" />
+						<input type="hidden" name="anvil_node2_pdu4_outlet"  id="anvil_node2_pdu4_outlet"  value="#!replace!anvil_node2_pdu4_outlet!#" />
 						<input type="hidden" name="anvil_ifn_gateway"        id="anvil_ifn_gateway"        value="#!replace!anvil_ifn_gateway!#" />
-						<input type="hidden" name="anvil_ifn_dns1"           id="anvil_ifn_dns1"           value="#!replace!anvil_ifn_dns1!#" />
-						<input type="hidden" name="anvil_ifn_dns2"           id="anvil_ifn_dns2"           value="#!replace!anvil_ifn_dns2!#" />
+						<input type="hidden" name="anvil_dns1"               id="anvil_dns1"               value="#!replace!anvil_dns1!#" />
+						<input type="hidden" name="anvil_dns2"               id="anvil_dns2"               value="#!replace!anvil_dns2!#" />
+						<input type="hidden" name="anvil_ntp1"               id="anvil_ntp1"               value="#!replace!anvil_ntp1!#" />
+						<input type="hidden" name="anvil_ntp2"               id="anvil_ntp2"               value="#!replace!anvil_ntp2!#" />
 						<input type="hidden" name="anvil_ups1_name"          id="anvil_ups1_name"          value="#!replace!anvil_ups1_name!#" />
 						<input type="hidden" name="anvil_ups1_ip"            id="anvil_ups1_ip"            value="#!replace!anvil_ups1_ip!#" />
 						<input type="hidden" name="anvil_ups2_name"          id="anvil_ups2_name"          value="#!replace!anvil_ups2_name!#" />
@@ -1159,6 +850,10 @@
 						<input type="hidden" name="anvil_pdu1_ip"            id="anvil_pdu1_ip"            value="#!replace!anvil_pdu1_ip!#" />
 						<input type="hidden" name="anvil_pdu2_name"          id="anvil_pdu2_name"          value="#!replace!anvil_pdu2_name!#" />
 						<input type="hidden" name="anvil_pdu2_ip"            id="anvil_pdu2_ip"            value="#!replace!anvil_pdu2_ip!#" />
+						<input type="hidden" name="anvil_pdu3_name"          id="anvil_pdu3_name"          value="#!replace!anvil_pdu3_name!#" />
+						<input type="hidden" name="anvil_pdu3_ip"            id="anvil_pdu3_ip"            value="#!replace!anvil_pdu3_ip!#" />
+						<input type="hidden" name="anvil_pdu4_name"          id="anvil_pdu4_name"          value="#!replace!anvil_pdu4_name!#" />
+						<input type="hidden" name="anvil_pdu4_ip"            id="anvil_pdu4_ip"            value="#!replace!anvil_pdu4_ip!#" />
 						<input type="hidden" name="anvil_switch1_name"       id="anvil_switch1_name"       value="#!replace!anvil_switch1_name!#" />
 						<input type="hidden" name="anvil_switch1_ip"         id="anvil_switch1_ip"         value="#!replace!anvil_switch1_ip!#" />
 						<input type="hidden" name="anvil_switch2_name"       id="anvil_switch2_name"       value="#!replace!anvil_switch2_name!#" />
@@ -1189,7 +884,7 @@
 	</form>
 </table>
 <br />
-<!-- end install-manifest-summay -->
+<!-- end install-manifest-summay-footer -->
 
 <!-- start form-error -->
 <table>
@@ -1420,6 +1115,10 @@
 		</td>
 	</tr>
 <!-- end install-manifest-form-header -->
+
+<!-- start install-manifest-form-hidden-entry -->
+	<input type="hidden" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" />
+<!-- end install-manifest-form-hidden-entry -->
 
 <!-- start install-manifest-form-text-entry -->
 	<tr>
