This is mainly a cleanup commit from yesterday's commit. It's still not fully tested, so I expect there to still be bugs.
* Made the sequence number optional when generating an install manifest file.
* Added NTP to the summary shown before an install manifest runs and made it and the DNS values show '--' if not set.
* Updated cycle_vm_nics.pl to detect bridges name X-bridge1 and X_bridge1.
* This commit mostly finishes the removal of guacamole.
* Added support for lwb-download to striker-installer.
* Made it so that striker-installer doesn't try to remap the network if a bridged interface is found.
* Deleted the dedicated function in striker-installer to add an-repo and merged it into the normal add-repo function. Also added logic to add_repo to check if the new repo has a GPG key and if so, see if the key is on the system. If not, it parses the GPG location and tries to find it and download it to the local system.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -299,7 +299,7 @@
 						<span class="subtle_text">#!string!row_0210!#:</span>
 					</td>
 					<td class="td_hidden_white" style="text-align: left;">
-						<span class="fixed_width">#!replace!anvil_ifn_dns1!#</span>
+						<span class="fixed_width">#!replace!anvil_dns1!#</span>
 					</td>
 				</tr>
 				<tr>
@@ -307,7 +307,23 @@
 						<span class="subtle_text">#!string!row_0211!#:</span>
 					</td>
 					<td class="td_hidden_white" style="text-align: left;">
-						<span class="fixed_width">#!replace!anvil_ifn_dns2!#</span>
+						<span class="fixed_width">#!replace!anvil_dns2!#</span>
+					</td>
+				</tr>
+				<tr>
+					<td class="td_hidden_white" style="text-align: right;">
+						<span class="subtle_text">#!string!row_0278!#:</span>
+					</td>
+					<td class="td_hidden_white" style="text-align: left;">
+						<span class="fixed_width">#!replace!anvil_ntp1!#</span>
+					</td>
+				</tr>
+				<tr>
+					<td class="td_hidden_white" style="text-align: right;">
+						<span class="subtle_text">#!string!row_0279!#:</span>
+					</td>
+					<td class="td_hidden_white" style="text-align: left;">
+						<span class="fixed_width">#!replace!anvil_ntp2!#</span>
 					</td>
 				</tr>
 				<tr>
@@ -359,7 +375,7 @@
 						<span class="subtle_text">#!string!row_0210!#:</span>
 					</td>
 					<td class="td_hidden_white" style="text-align: left;">
-						<span class="fixed_width">#!replace!anvil_ifn_dns1!#</span>
+						<span class="fixed_width">#!replace!anvil_dns1!#</span>
 					</td>
 				</tr>
 				<tr>
@@ -367,7 +383,7 @@
 						<span class="subtle_text">#!string!row_0211!#:</span>
 					</td>
 					<td class="td_hidden_white" style="text-align: left;">
-						<span class="fixed_width">#!replace!anvil_ifn_dns2!#</span>
+						<span class="fixed_width">#!replace!anvil_dns2!#</span>
 					</td>
 				</tr>
 				<tr>
