The updates are getting closer to being in a working condition again, but more testing is still needed.
This commit is mostly for Install Manifest. Changes:
* Code cleaned up and some text display bugs fixed.
* Finished making almost all install manifest fields hideable. Required fields will display if a default isn't provided, regardless of the hide setting for the field being enabled.
* Fixed up the display summary of an Install Manifest that is about to run to show the PDUs. This section will be overhauled to be dynamic so missing/hidden values aren't shown.
* Disabled adding the an-repo to Install Manifest runs on nodes. For now, this will prevent many installs from working and will be fixed in the next checkin when the an-repo is added to the main repo list.
* Added a new feature to striker-installer that allows a user to define a custom striker.conf to use during a dashboard install.
* Moved the striker-installer's an-repo to be pre-defined in the user-configurable list of repos, making all repos handled by the same function.
* Added a check for needed GPG keys in added repos that checks for the public key and if it is not found, tries to guess where it is and installs it if it finds it.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -405,10 +405,10 @@
 			</table>
 		</td>
 	</tr>
-	<!-- PDU 1 -->
+	<!-- PDUs -->
 	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0192!#
+		<td class="highlight_good_bold" rowspan="4">
+			#!string!row_0196!#
 		</td>
 		<td>
 			<table class="hidden_table">
@@ -419,8 +419,6 @@
 					<td class="td_hidden_white" class="fixed_width" style="text-align: left;">
 						<span class="fixed_width">#!replace!anvil_pdu1_name!#</span>
 					</td>
-				</tr>
-				<tr>
 					<td class="td_hidden_white" style="text-align: right;">
 						<span class="subtle_text">#!string!row_0212!#:</span>
 					</td>
@@ -439,8 +437,6 @@
 					<td class="td_hidden_white" class="fixed_width" style="text-align: left;">
 						<span class="fixed_width">#!replace!anvil_pdu1_name!#</span>
 					</td>
-				</tr>
-				<tr>
 					<td class="td_hidden_white" style="text-align: right;">
 						<span class="subtle_text">#!string!row_0212!#:</span>
 					</td>
@@ -451,11 +447,7 @@
 			</table>
 		</td>
 	</tr>
-	<!-- PDU 2 -->
 	<tr>
-		<td class="highlight_good_bold">
-			#!string!row_0193!#
-		</td>
 		<td>
 			<table class="hidden_table">
 				<tr>
@@ -465,8 +457,6 @@
 					<td class="td_hidden_white" class="fixed_width" style="text-align: left;">
 						<span class="fixed_width">#!replace!anvil_pdu2_name!#</span>
 					</td>
-				</tr>
-				<tr>
 					<td class="td_hidden_white" style="text-align: right;">
 						<span class="subtle_text">#!string!row_0212!#:</span>
 					</td>
@@ -485,13 +475,87 @@
 					<td class="td_hidden_white" class="fixed_width" style="text-align: left;">
 						<span class="fixed_width">#!replace!anvil_pdu2_name!#</span>
 					</td>
-				</tr>
-				<tr>
 					<td class="td_hidden_white" style="text-align: right;">
 						<span class="subtle_text">#!string!row_0212!#:</span>
 					</td>
 					<td class="td_hidden_white" style="text-align: left;">
 						<span class="fixed_width">#!replace!anvil_node2_pdu2_outlet!#</span>
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<table class="hidden_table">
+				<tr>
+					<td class="td_hidden_white" style="text-align: right;">
+						<span class="subtle_text">#!string!row_0165!#:</span>
+					</td>
+					<td class="td_hidden_white" class="fixed_width" style="text-align: left;">
+						<span class="fixed_width">#!replace!anvil_pdu3_name!#</span>
+					</td>
+					<td class="td_hidden_white" style="text-align: right;">
+						<span class="subtle_text">#!string!row_0212!#:</span>
+					</td>
+					<td class="td_hidden_white" style="text-align: left;">
+						<span class="fixed_width">#!replace!anvil_node1_pdu3_outlet!#</span>
+					</td>
+				</tr>
+			</table>
+		</td>
+		<td>
+			<table class="hidden_table">
+				<tr>
+					<td class="td_hidden_white" style="text-align: right;">
+						<span class="subtle_text">#!string!row_0165!#:</span>
+					</td>
+					<td class="td_hidden_white" class="fixed_width" style="text-align: left;">
+						<span class="fixed_width">#!replace!anvil_pdu3_name!#</span>
+					</td>
+					<td class="td_hidden_white" style="text-align: right;">
+						<span class="subtle_text">#!string!row_0212!#:</span>
+					</td>
+					<td class="td_hidden_white" style="text-align: left;">
+						<span class="fixed_width">#!replace!anvil_node2_pdu3_outlet!#</span>
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<table class="hidden_table">
+				<tr>
+					<td class="td_hidden_white" style="text-align: right;">
+						<span class="subtle_text">#!string!row_0165!#:</span>
+					</td>
+					<td class="td_hidden_white" class="fixed_width" style="text-align: left;">
+						<span class="fixed_width">#!replace!anvil_pdu4_name!#</span>
+					</td>
+					<td class="td_hidden_white" style="text-align: right;">
+						<span class="subtle_text">#!string!row_0212!#:</span>
+					</td>
+					<td class="td_hidden_white" style="text-align: left;">
+						<span class="fixed_width">#!replace!anvil_node1_pdu4_outlet!#</span>
+					</td>
+				</tr>
+			</table>
+		</td>
+		<td>
+			<table class="hidden_table">
+				<tr>
+					<td class="td_hidden_white" style="text-align: right;">
+						<span class="subtle_text">#!string!row_0165!#:</span>
+					</td>
+					<td class="td_hidden_white" class="fixed_width" style="text-align: left;">
+						<span class="fixed_width">#!replace!anvil_pdu4_name!#</span>
+					</td>
+					<td class="td_hidden_white" style="text-align: right;">
+						<span class="subtle_text">#!string!row_0212!#:</span>
+					</td>
+					<td class="td_hidden_white" style="text-align: left;">
+						<span class="fixed_width">#!replace!anvil_node2_pdu4_outlet!#</span>
 					</td>
 				</tr>
 			</table>
