--- a/html/skins/alteeve/select-anvil.html
+++ b/html/skins/alteeve/select-anvil.html
@@ -35,7 +35,7 @@
 	</tr>
 	<tr>
 		<td class="#!replace!class!#">
-			#!string!row_0083!#
+			#!replace!row!#
 		</td>
 		<td>
 			#!replace!message!#
