This commit completes the new "Hard-Reset Anvil!" feature!
Changes
* tools/anvil-kick-apc-ups now requires that it runs are the 'root' user.
* tools/anvil-kick-apc-ups adds the new '--cancel' switch with cancels the pending power-off action.
* tools/anvil-kick-apc-ups now automatically adds and removes itself from the root user's cron table (the former on a normal run, the later when called with '--cancel'.
* A new system variables called 'sys::use_apc_ups_watchdog' was added which, if set to '1', will enable the 'Hard Reset' option below the existing 'Cold-Stop Anvil!' button presented on the main page. If, however, the '/root/anvil-kick-apc-ups' script isn't found on *both* nodes, this button will be disabled.
* Now, when the existing 'Cold-Stop Anvil!' button is used, 'cold_stop_anvil()' is called with a new 'cancel_ups' argument set to '1'. This causes a check to be made to see if '/root/anvil-kick-apc-ups' exists and, if so, it is called with '--cancel'.
* When the new 'Hard-Reset Anvil!' button is pressed, the 'cold_stop_anvil()' function is called with cold_stop_anvil()'s new 'cancel_ups' variable set to '0'. This tells 'cold_stop_anvil()' to *NOT* send the '--cancel' option, leaving the UPSes to power off for 'sleep time' and then power back on, once the pending power-off delay expires.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -2924,6 +2924,18 @@
 <!-- ############################################################################ -->
 <!-- end display-cluster-storage-footer -->
 
+<!-- start boot-or-stop-one-button -->
+						<td rowspan="2">
+							#!replace!button!#
+						</td>
+<!-- end boot-or-stop-one-button -->
+
+<!-- start boot-or-stop-two-buttons -->
+						<td>
+							#!replace!button!#
+						</td>
+<!-- end boot-or-stop-two-buttons -->
+
 <!-- start display-node-controls-full -->
 				<table width="100%">
 					<tr>
@@ -2949,9 +2961,7 @@
 						<td>
 							#!replace!say_node1_name!#
 						</td>
-						<td rowspan="2">
-							#!replace!dual_boot_button!#
-						</td>
+						#!replace!boot_or_stop_button_1!#
 						<td>
 							#!replace!say_node1_boot!#
 						</td>
@@ -2975,6 +2985,7 @@
 						<td>
 							#!replace!say_node2_name!#
 						</td>
+						#!replace!boot_or_stop_button_2!#
 						<td>
 							#!replace!say_node2_boot!#
 						</td>
