Actual work is happening again... This commit will not allow the install manifest to run!
* Started changing Striker to look for it's tools on nodes in /sbin/striker/ (and updating kickstart files to make sure this is so when installed over PXE, though these changes are not in git yet).
* Cleaned up the displaying or errors when running Install Manifest when the anvil-map-network tool isn't found.
* Commented out a bug of debug log entries.
* Reordered when the existing install manifest files header is printed and added some debug logging.
* Back to working on updating install manifest to record selected MAC addresses, but this isn't finished yet.
* Disabled attempting to download anvil-map-network from the web when no web connection was found.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -1222,7 +1222,7 @@
 		<td class="highlight_good_bold">
 			#!replace!row!#<span class="highlight_bad_star">#!replace!star!#</span>
 		</td>
-		<td>
+		<td style="white-space: nowrap;">
 			<input type="text" name="#!replace!network_name!#" id="#!replace!network_id!#" value="#!replace!network_value!#" style="width: 100px;" /> / 
 			<input type="text" name="#!replace!subnet_name!#" id="#!replace!subnet_id!#" value="#!replace!subnet_value!#" style="width: 100px;" />
 		</td>
