--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -191,6 +191,16 @@
 	</tr>
 <!-- end new-anvil-install-failed -->
 
+<!-- start new-anvil-install-failed-inline -->
+	<tr>
+		<td>
+			<br />
+			#!replace!message!#<br />
+			<br />
+		</td>
+	</tr>
+<!-- end new-anvil-install-failed-inline -->
+
 <!-- start new-anvil-install-warning -->
 	<tr>
 		<td class="highlight_warning_bold">
