This adds support for selecting which model/brand of switched PDU is being used when building/loading an Install Manifest. It also makes 'More Info' links formatted as 'nowrap' in the 'alteeve' skin.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -1211,11 +1211,28 @@
 		<td style="text-align: left;">
 			#!replace!explain!#<br />
 		</td>
-		<td>
+		<td style="white-space: nowrap;">
 			#!replace!more_info!#<br />
 		</td>
 	</tr>
 <!-- end install-manifest-form-text-entry -->
+
+<!-- start install-manifest-form-select-entry -->
+	<tr>
+		<td class="highlight_good_bold">
+			#!replace!row!#<span class="highlight_bad_star">#!replace!star!#</span>
+		</td>
+		<td>
+			#!replace!select!#
+		</td>
+		<td style="text-align: left;">
+			#!replace!explain!#<br />
+		</td>
+		<td style="white-space: nowrap;">
+			#!replace!more_info!#<br />
+		</td>
+	</tr>
+<!-- end install-manifest-form-select-entry -->
 
 <!-- start install-manifest-form-subnet-entry -->
 	<tr>
@@ -1229,7 +1246,7 @@
 		<td style="text-align: left;">
 			#!replace!explain!#<br />
 		</td>
-		<td>
+		<td style="white-space: nowrap;">
 			#!replace!more_info!#<br />
 		</td>
 	</tr>
@@ -1246,7 +1263,7 @@
 		<td style="text-align: left;">
 			#!replace!explain!#<br />
 		</td>
-		<td>
+		<td style="white-space: nowrap;">
 			#!replace!more_info!#<br />
 		</td>
 	</tr>
