Fixed some bugs with the new PDU agent/brand code. Now displays the selected brand in the Install Manifest summary screen (and records it in variables to be passed to the creation script). Also properly records the selected agent in the generated manifest.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -928,12 +928,16 @@
 						<input type="hidden" name="anvil_ups2_ip"            id="anvil_ups2_ip"            value="#!replace!anvil_ups2_ip!#" />
 						<input type="hidden" name="anvil_pdu1_name"          id="anvil_pdu1_name"          value="#!replace!anvil_pdu1_name!#" />
 						<input type="hidden" name="anvil_pdu1_ip"            id="anvil_pdu1_ip"            value="#!replace!anvil_pdu1_ip!#" />
+						<input type="hidden" name="anvil_pdu1_agent"         id="anvil_pdu1_agent"         value="#!replace!anvil_pdu1_agent!#" />
 						<input type="hidden" name="anvil_pdu2_name"          id="anvil_pdu2_name"          value="#!replace!anvil_pdu2_name!#" />
 						<input type="hidden" name="anvil_pdu2_ip"            id="anvil_pdu2_ip"            value="#!replace!anvil_pdu2_ip!#" />
+						<input type="hidden" name="anvil_pdu2_agent"         id="anvil_pdu2_agent"         value="#!replace!anvil_pdu2_agent!#" />
 						<input type="hidden" name="anvil_pdu3_name"          id="anvil_pdu3_name"          value="#!replace!anvil_pdu3_name!#" />
 						<input type="hidden" name="anvil_pdu3_ip"            id="anvil_pdu3_ip"            value="#!replace!anvil_pdu3_ip!#" />
+						<input type="hidden" name="anvil_pdu3_agent"         id="anvil_pdu3_agent"         value="#!replace!anvil_pdu3_agent!#" />
 						<input type="hidden" name="anvil_pdu4_name"          id="anvil_pdu4_name"          value="#!replace!anvil_pdu4_name!#" />
 						<input type="hidden" name="anvil_pdu4_ip"            id="anvil_pdu4_ip"            value="#!replace!anvil_pdu4_ip!#" />
+						<input type="hidden" name="anvil_pdu4_agent"         id="anvil_pdu4_agent"         value="#!replace!anvil_pdu4_agent!#" />
 						<input type="hidden" name="anvil_switch1_name"       id="anvil_switch1_name"       value="#!replace!anvil_switch1_name!#" />
 						<input type="hidden" name="anvil_switch1_ip"         id="anvil_switch1_ip"         value="#!replace!anvil_switch1_ip!#" />
 						<input type="hidden" name="anvil_switch2_name"       id="anvil_switch2_name"       value="#!replace!anvil_switch2_name!#" />
